--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <div class="header">
 	<div class="offer">
 		<div class="inner blured">
-		<span>Нажатием на кнопку "Узнать" Вы подтверждаете свое согласие с подключением подписки SUBNAME и <a
-			href="http://podpiski.megafon.ru/col/mds4/web/jsp/files/oferta.pdf">Условиями предоставления подписки</a>. Стоимость подписки SUBPRICE.ACCOUNT. Услуга предоставляется Контент-провайдером PROVIDER.</span>
+			<span>Нажатием на кнопку "Узнать" Вы подтверждаете свое согласие с подключением подписки SUBNAME и <a	href="http://podpiski.megafon.ru/col/mds4/web/jsp/files/oferta.pdf">Условиями предоставления подписки</a>. Стоимость подписки SUBPRICE.ACCOUNT. Услуга предоставляется Контент-провайдером PROVIDER.</span>
 		</div>
 	</div>
 	<div class="inner blured">
@@ -163,37 +162,9 @@
 
 <div class="rules" id="footer">
 	<div class="inner blured">
-		<p>Информация для абонентов - тел. 8 800 500-25-43 (бесплатно в домашнем регионе) | <a href="ВАША ССЫЛКА НА ПРАВИЛА
-ПОДПИСКИ">Правила подписки поставщика услуг</a> | <a href="#<LK_LINK_URL>">Личный кабинет</a></p>
+		<p>Информация для абонентов - тел. 8 800 500-25-43 (бесплатно в домашнем регионе) | <a href="ВАША ССЫЛКА НА ПРАВИЛА ПОДПИСКИ">Правила подписки поставщика услуг</a> | <a href="#<LK_LINK_URL>">Личный кабинет</a></p>
 	</div>
 </div>
-<script type="text/javascript">
-		//<![CDATA[
-		function rsz() {
-				var footer = document['getElementById']('footer');
-				var buttonWrap = document['getElementsByClassName']('btn-wrapper')[0];
-				footer['style']['bottom'] = "auto";
-				footer['style']['top'] = (window['innerHeight'] - footer.offsetHeight) + 'px';
-				if ((window['innerHeight'] > 212) && (window['innerHeight'] < 233)) {
-						buttonWrap['style']['marginTop'] = '-'+ (footer.offsetHeight-55) + 'px';
-				} else { buttonWrap['style']['marginTop'] = 0; }
-
-				document.body.style.height = window.innerHeight + 'px';
-		}
-		setInterval(function() {
-				rsz()
-		}, 100);
-		window['onresize'] = function() {
-				window['scrollTo'](0, 0);
-				setTimeout(function() {
-						rsz()
-				}, 100)
-		};
-		document.addEventListener('touchmove', function(e) {
-				e.preventDefault();
-		}, { passive: false });
-		//]]>
-</script>
 
 </body>
 </html>
